modificados:     README.pdf 	modificados:     datathon.ipynb

--- a/datathon.ipynb
+++ b/datathon.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,293 @@
     "df_test = pd.read_csv(\"hospitalizaciones_test.csv\",index_col=False)\n",
     "\n",
     "#lectura datos de entrenamiento y prueba\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Available Extra Rooms in Hospital</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Ward_Facility_Code</th>\n",
+       "      <th>doctor_name</th>\n",
+       "      <th>staff_available</th>\n",
+       "      <th>patientid</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>Type of Admission</th>\n",
+       "      <th>Severity of Illness</th>\n",
+       "      <th>health_conditions</th>\n",
+       "      <th>Visitors with Patient</th>\n",
+       "      <th>Insurance</th>\n",
+       "      <th>Admission_Deposit</th>\n",
+       "      <th>Stay (in days)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>gynecology</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Dr Sophia</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33070</td>\n",
+       "      <td>41-50</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Trauma</td>\n",
+       "      <td>Extreme</td>\n",
+       "      <td>Diabetes</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>2966.408696</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>gynecology</td>\n",
+       "      <td>B</td>\n",
+       "      <td>Dr Sophia</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34808</td>\n",
+       "      <td>31-40</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Trauma</td>\n",
+       "      <td>Minor</td>\n",
+       "      <td>Heart disease</td>\n",
+       "      <td>2</td>\n",
+       "      <td>No</td>\n",
+       "      <td>3554.835677</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>gynecology</td>\n",
+       "      <td>B</td>\n",
+       "      <td>Dr Sophia</td>\n",
+       "      <td>8</td>\n",
+       "      <td>44577</td>\n",
+       "      <td>21-30</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Trauma</td>\n",
+       "      <td>Extreme</td>\n",
+       "      <td>Diabetes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>5624.733654</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>gynecology</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Dr Olivia</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3695</td>\n",
+       "      <td>31-40</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Urgent</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4814.149231</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>anesthesia</td>\n",
+       "      <td>E</td>\n",
+       "      <td>Dr Mark</td>\n",
+       "      <td>10</td>\n",
+       "      <td>108956</td>\n",
+       "      <td>71-80</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Trauma</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>Diabetes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>No</td>\n",
+       "      <td>5169.269637</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>gynecology</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Dr Olivia</td>\n",
+       "      <td>2</td>\n",
+       "      <td>130189</td>\n",
+       "      <td>21-30</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Trauma</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>4539.268397</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>gynecology</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Dr Olivia</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11175</td>\n",
+       "      <td>31-40</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Emergency</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>4669.961786</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
+       "      <td>gynecology</td>\n",
+       "      <td>B</td>\n",
+       "      <td>Dr Sophia</td>\n",
+       "      <td>8</td>\n",
+       "      <td>82988</td>\n",
+       "      <td>21-30</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Emergency</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>Heart disease</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>5101.675480</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>TB &amp; Chest disease</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Dr John</td>\n",
+       "      <td>7</td>\n",
+       "      <td>80339</td>\n",
+       "      <td>31-40</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Trauma</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>2</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4899.767616</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4</td>\n",
+       "      <td>gynecology</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Dr Sarah</td>\n",
+       "      <td>7</td>\n",
+       "      <td>89055</td>\n",
+       "      <td>41-50</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Trauma</td>\n",
+       "      <td>Extreme</td>\n",
+       "      <td>Asthama</td>\n",
+       "      <td>4</td>\n",
+       "      <td>No</td>\n",
+       "      <td>3350.366777</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Available Extra Rooms in Hospital          Department Ward_Facility_Code  \\\n",
+       "0                                  4          gynecology                  D   \n",
+       "1                                  4          gynecology                  B   \n",
+       "2                                  2          gynecology                  B   \n",
+       "3                                  4          gynecology                  D   \n",
+       "4                                  2          anesthesia                  E   \n",
+       "5                                  2          gynecology                  F   \n",
+       "6                                  7          gynecology                  D   \n",
+       "7                                  3          gynecology                  B   \n",
+       "8                                  2  TB & Chest disease                  A   \n",
+       "9                                  4          gynecology                  D   \n",
+       "\n",
+       "  doctor_name  staff_available  patientid    Age  gender Type of Admission  \\\n",
+       "0   Dr Sophia                0      33070  41-50  Female            Trauma   \n",
+       "1   Dr Sophia                2      34808  31-40  Female            Trauma   \n",
+       "2   Dr Sophia                8      44577  21-30  Female            Trauma   \n",
+       "3   Dr Olivia                7       3695  31-40  Female            Urgent   \n",
+       "4     Dr Mark               10     108956  71-80    Male            Trauma   \n",
+       "5   Dr Olivia                2     130189  21-30  Female            Trauma   \n",
+       "6   Dr Olivia                5      11175  31-40  Female         Emergency   \n",
+       "7   Dr Sophia                8      82988  21-30  Female         Emergency   \n",
+       "8     Dr John                7      80339  31-40   Other            Trauma   \n",
+       "9    Dr Sarah                7      89055  41-50  Female            Trauma   \n",
+       "\n",
+       "  Severity of Illness health_conditions  Visitors with Patient Insurance  \\\n",
+       "0             Extreme          Diabetes                      4       Yes   \n",
+       "1               Minor     Heart disease                      2        No   \n",
+       "2             Extreme          Diabetes                      2       Yes   \n",
+       "3            Moderate              None                      4        No   \n",
+       "4            Moderate          Diabetes                      2        No   \n",
+       "5            Moderate             Other                      2       Yes   \n",
+       "6            Moderate             Other                      3       Yes   \n",
+       "7            Moderate     Heart disease                      3       Yes   \n",
+       "8            Moderate             Other                      2        No   \n",
+       "9             Extreme           Asthama                      4        No   \n",
+       "\n",
+       "   Admission_Deposit  Stay (in days)  \n",
+       "0        2966.408696               8  \n",
+       "1        3554.835677               9  \n",
+       "2        5624.733654               7  \n",
+       "3        4814.149231               8  \n",
+       "4        5169.269637              34  \n",
+       "5        4539.268397              11  \n",
+       "6        4669.961786               8  \n",
+       "7        5101.675480               7  \n",
+       "8        4899.767616              12  \n",
+       "9        3350.366777               8  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.head(10)"
    ]
   }
  ],
@@ -41,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
